manifests/security/network-policies/allow-backend-to-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-frontend
  namespace: security-lab
spec:
  podSelector:
    matchLabels:
      run: frontend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              run: backend
      ports:
        - protocol: TCP
          port: 80
